<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <include
            android:id="@+id/appbar"
            layout="@layout/appbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_125dp"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_no_image"
            app:layout_constraintTop_toBottomOf="@id/appbar" />

        <TextView
            android:id="@+id/txt_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="@dimen/text_15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_photo" />

        <TextView
            android:id="@+id/tv_take_me_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:text="@string/take_me_here"
            android:textColor="@color/text_link"
            android:textSize="@dimen/text_15sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_photo" />

        <fragment
            android:id="@+id/frag_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_200dp"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintTop_toBottomOf="@id/txt_location" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="@dimen/corner_radius_8dp"
            app:layout_constraintTop_toBottomOf="@id/frag_map">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_16dp">

                <ImageView
                    android:id="@+id/iv_placeholder"
                    android:layout_width="@dimen/image_50dp"
                    android:layout_height="@dimen/image_50dp"
                    android:src="@drawable/placeholder"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_16dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15sp"
                    app:layout_constraintLeft_toRightOf="@id/iv_placeholder"
                    app:layout_constraintTop_toTopOf="@id/iv_placeholder" />

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_12sp"
                    app:layout_constraintLeft_toRightOf="@id/iv_placeholder"
                    app:layout_constraintTop_toBottomOf="@id/tv_name" />

                <TextView
                    android:id="@+id/tv_short_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_9sp"
                    app:layout_constraintLeft_toRightOf="@id/iv_placeholder"
                    app:layout_constraintTop_toBottomOf="@id/tv_category" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_about_commerce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:text="@string/about_commerce"
            android:textColor="@color/black"
            android:textSize="@dimen/text_15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_info" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_32dp"
            app:cardCornerRadius="@dimen/corner_radius_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_about_commerce">

            <TextView
                android:id="@+id/tv_long_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_16dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_12sp" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>